<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddNewTeamActivity"
    android:background="@color/colorGreen"
    tools:showIn="@layout/activity_add_new_team">


    <TextView
        android:id="@+id/City"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_City"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_Name"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/City" />

    <TextView
        android:id="@+id/Sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_Sport"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/Mvp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_Mvp"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sport" />

    <EditText
        android:id="@+id/CityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/City"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NameTex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/CityText" />

    <Spinner
        android:id="@+id/SportSpinner"
        android:layout_width="224dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:entries="@array/Sport_arrays"
        app:layout_constraintStart_toEndOf="@+id/Sport"
        app:layout_constraintTop_toBottomOf="@+id/NameTex" />

    <EditText
        android:id="@+id/MvpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/Mvp"
        app:layout_constraintTop_toBottomOf="@+id/SportSpinner" />

    <ImageView
        android:id="@+id/DefaultImage"
        android:layout_width="185dp"
        android:layout_height="146dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/default_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mvp" />

    <TextView
        android:id="@+id/UploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:text="@string/app_Upload"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DefaultImage"
        app:layout_constraintTop_toBottomOf="@+id/MvpText" />

    <LinearLayout
        android:layout_width="425dp"
        android:layout_height="189dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UploadImage">


        <TextView
            android:id="@+id/SubmitTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:text="@string/app_Submit"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ExitPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_Exit"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>